--- a/ICA-SVP/ICA-SVP/ICA-SVP.csproj
+++ b/ICA-SVP/ICA-SVP/ICA-SVP.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Testing.cs" />
-    <Compile Include="TestingDataCleaning.cs" />
+    <Compile Include="TestingJSON.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
